chore(homework1): Change file for the updated one

--- a/src/First Homework/2_Minitarea1.ipynb
+++ b/src/First Homework/2_Minitarea1.ipynb
@@ -213,7 +213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En el dataset, cada string representa un documento."
+    "En el dataset, cada string representa un documento. Observación: Corpus = Dataset."
    ]
   },
   {
@@ -239,7 +239,7 @@
    "source": [
     "**Obtener vocabulario (1 punto)** \n",
     "\n",
-    "Implementar la función `get_vocab(dataset)` que recibe el dataset y retorna un arreglo con cada palabra que aparece en el dataset. (sin duplicar)"
+    "Implementar la función `get_vocab(dataset)` que recibe el dataset y retorna un arreglo con cada palabra que aparece en el dataset. (sin duplicar). Observación: vocabulario = types. "
    ]
   },
   {
@@ -787,29 +787,29 @@
    "source": [
     "**Bonus: Hacer una función para realizar una Query (2 puntos extra)**\n",
     "\n",
-    "`query(sentence, tf_idf)` función debe retornar un ranking con los documentos mas relevantes para la palabra consultada. \n",
+    "`calc_query(query, dataset)` función debe retornar un ranking con los documentos mas relevantes para la palabra consultada. \n",
     "\n",
     "Sugerencias:\n",
     "\n",
-    "- Primero, transformar la oración a un documento del modelo tf_idf (ojo que solo funciona cuando todas las palabras de la oración existen en el modelo que acabas de crear).\n",
-    "- Luego, usar similitud coseno para comparar los documentos ya precalculados y la oración que acabas de consultar.\n",
-    "- A partir de eso, crear un ranking con los documentos mas similares.\n",
+    "- Primero, recalcular la matriz TF-IDF usando el dataset mas la query. Usen las funciones anteriores para calcular la matriz.\n",
+    "- Luego, usar similitud coseno para comparar los documentos ya precalculados y la consulta. (deben implementar dicha función usando las herramientas básicas de numpy).\n",
+    "- A partir de eso, retornar un ranking con los documentos mas similares.\n",
     "\n",
     "Deben reportar por lo menos 2 ejemplos.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-23T14:11:58.857804Z",
-     "start_time": "2020-03-23T14:11:58.838159Z"
+     "end_time": "2020-03-24T13:06:17.829181Z",
+     "start_time": "2020-03-24T13:06:17.825192Z"
     }
    },
    "outputs": [],
    "source": [
-    "def query(sentence, tf_idf):\n",
+    "def calc_query(query, dataset):\n",
     "    pass"
    ]
   },
