feat(first_homework): Finish programming part

--- a/src/First Homework/2_Minitarea1.ipynb
+++ b/src/First Homework/2_Minitarea1.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "-----------------\n",
     "\n",
-    "Nombre: \n",
+    "Nombre: Joaquín Cruz D.\n",
     "\n",
     "Fecha de Entrega: Lunes 6 de Abril\n",
     "\n",
@@ -127,7 +127,12 @@
     "\n",
     "Respuesta: \n",
     "\n",
-    "        Vocabulario: ...\n"
+    "        Tokens d1: [I] [like] [human] [languages]\n",
+    "        Tokens d2: [I] [like] [programming] [languages]\n",
+    "        Tokens d3: [Spanish] [is] [my] [favorite] [language]\n",
+    "        \n",
+    "        Vocabulario = {I, like, human, languages, programming, Spanish, is, my, favorite, language}\n",
+    "        "
    ]
   },
   {
@@ -138,11 +143,11 @@
     "\n",
     "Respuesta: \n",
     "\n",
-    "        Stopwords: ...\n",
+    "        Stopwords: {is, my}\n",
     "        \n",
-    "        Reglas de Stemming: ...\n",
+    "        Reglas de Stemming: {S -> }\n",
     "        \n",
-    "        Vocabulario: ...\n"
+    "        Vocabulario: {I, like, human, language, programming, Spanish, favorite}\n"
    ]
   },
   {
@@ -218,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-23T14:11:58.637916Z",
@@ -244,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-23T14:11:58.657732Z",
@@ -254,12 +259,18 @@
    "outputs": [],
    "source": [
     "def get_vocab(dataset):\n",
-    "    pass"
+    "    vocabulary = list()\n",
+    "    for sentence in dataset:\n",
+    "        words = sentence.split(' ')\n",
+    "        for word in words:\n",
+    "            if word not in vocabulary:\n",
+    "                vocabulary.append(word)\n",
+    "    return vocabulary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-23T14:11:58.671780Z",
@@ -273,7 +284,7 @@
        "['t4', 't3', 't1', 't5', 't2']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-23T14:11:58.680740Z",
@@ -326,14 +337,18 @@
    "outputs": [],
    "source": [
     "def calc_bow(dataset, vocab):\n",
-    "    pass\n",
-    "\n",
+    "    data = dict()\n",
+    "    for term in vocab:\n",
+    "        data[term] = list()\n",
+    "        for sentence in dataset:\n",
+    "            data[term].append(sentence.count(term))\n",
+    "    return pd.DataFrame(data=data)\n",
     "dataset_bow = calc_bow(dataset, vocab)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-23T14:11:58.694719Z",
@@ -432,7 +447,7 @@
        "5   0   3   0   0   3"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-23T14:11:58.717795Z",
@@ -469,14 +484,17 @@
    "outputs": [],
    "source": [
     "def calc_tf(dataset_bow):\n",
-    "    pass\n",
-    "\n",
+    "    tf_dataset = dataset_bow.copy()\n",
+    "    max_dataset = tf_dataset.max(axis=\"columns\")\n",
+    "    for term in tf_dataset:\n",
+    "        tf_dataset[term] = tf_dataset[term].div(max_dataset)\n",
+    "    return tf_dataset\n",
     "tf = calc_tf(dataset_bow)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-23T14:11:58.737943Z",
@@ -576,7 +594,7 @@
        "5  0.0  1.0  0.0  0.0  1.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 70,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-23T14:11:58.777595Z",
@@ -608,15 +626,21 @@
    },
    "outputs": [],
    "source": [
+    "import functools\n",
     "def calc_idf(dataset_bow):\n",
-    "    pass\n",
-    "\n",
+    "    number_documents = len(dataset_bow.index) # rows (or index) represents the documents\n",
+    "    idf_dict = dict()\n",
+    "    for term in dataset_bow:\n",
+    "        appear_on_document_map = map(lambda x: 1 if x > 0 else 0, dataset_bow[term])\n",
+    "        total_documents_with_term = functools.reduce(lambda x,y: x+y, appear_on_document_map)\n",
+    "        idf_dict[term] = np.log10(number_documents / total_documents_with_term)\n",
+    "    return idf_dict\n",
     "idf = calc_idf(dataset_bow)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 71,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-23T14:11:58.792834Z",
@@ -634,7 +658,7 @@
        " 't2': 0.07918124604762482}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 72,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-23T14:11:58.817896Z",
@@ -666,14 +690,17 @@
    "outputs": [],
    "source": [
     "def calc_tf_idf(tf, idf):\n",
-    "    pass\n",
-    "\n",
+    "    tf_idf = tf.copy()\n",
+    "    for term in tf_idf:\n",
+    "        term_idf = idf[term]\n",
+    "        tf_idf[term] = tf_idf[term].mul(term_idf)\n",
+    "    return tf_idf\n",
     "tf_idf = calc_tf_idf(tf, idf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 74,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-23T14:11:58.837641Z",
@@ -772,7 +799,7 @@
        "5  0.000000  0.176091  0.000000  0.000000  0.079181"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,7 +908,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.7"
   },
   "toc": {
    "base_numbering": 1,
