--- a/src/First Homework/2_Minitarea1.ipynb
+++ b/src/First Homework/2_Minitarea1.ipynb
@@ -81,7 +81,7 @@
    "source": [
     "**P1) Son Natural Language Processing y Computational Linguistics lo mismo? (1 Punto)**\n",
     "\n",
-    "    Respuesta: \n",
+    "    Respuesta: No, pues los ambitos de estudios son distintos aun que si comparten muchas cosas. El NLP son metodos  para problemas cuyos inputs o outputs corresponden a lenguaje humano. En cambio el CL estudia como el computador procesa el entendimiento al lenguaje humano. Aun que problemas (o tasks) de NLP pueden involucrar el entendimiento del lenguaje humano, existen otros problemas (por ejemplo, traducción automatica) que no son del area de CL.\n",
     "    "
    ]
   },
@@ -91,7 +91,11 @@
    "source": [
     "**P2) Por qué estudiar el lenguaje humano es difícil? (1 Punto)**\n",
     "\n",
-    "    Respuesta: \n",
+    "    Respuesta: Porque el lenguaje tiene tres propiedades que hacen su representación computacional compleja. Estas son:\n",
+    "    \n",
+    "    1. Su diferenciación, pues palabras que no tienen letras en común pueden tener alguna relación (Por ejemplo, manzana y durazno, ambas son relacionadas al ser frutas pero las letras que la componen son muy distintas)\n",
+    "    2. La composición de las oraciones, esto es que las palabras en una oración puede tener un significado distinto al individual.\n",
+    "    3. Su \"Sparsness\", es decir que la cantidad de formas en que un conjunto de palabras discreto pueden ser combinados puede ser infinito.\n",
     "    \n"
    ]
   },
@@ -161,7 +165,9 @@
    "source": [
     "**P4) Conceptualmente cuál es la diferencia entre usar machine learning clásico (empirismo) y deep learning para un problema de NLP (Puede usar el análisis de sentimientos como ejemplo) (1 punto)**\n",
     "\n",
-    "    Respuesta: "
+    "    Respuesta: Que para lograr buenos resultados usando machine learning clasico, se requerian añadir muchas cualidades del corpus extra en su etiquetado para que los modelos se portaran bien. Estas cualidades pueden ser (usando como ejemplo el analisis de sentimientos de tweets) emoticones enojados, las negaciónes usadas y su cantidad, el numero de palabras que están solo en mayusculas etc... Todas estas cualidades eran realizadas a mano por la persona que queria entrenar su modelo.\n",
+    "    \n",
+    "    En cambio al usar deep learning, la red aprende o se da cuenta \"sola\" de estas cualidades extra del corpus. Se adapta a estas al momento de realizar el entrenamiento de sus capas."
    ]
   },
   {
@@ -194,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-23T14:11:58.618054Z",
@@ -223,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-23T14:11:58.637916Z",
@@ -249,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-23T14:11:58.657732Z",
@@ -258,7 +264,7 @@
    },
    "outputs": [],
    "source": [
-    "def get_vocab(dataset):\n",
+    "def get_vocab(dataset: list) -> list:\n",
     "    vocabulary = list()\n",
     "    for sentence in dataset:\n",
     "        words = sentence.split(' ')\n",
@@ -270,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-23T14:11:58.671780Z",
@@ -284,7 +290,7 @@
        "['t4', 't3', 't1', 't5', 't2']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-23T14:11:58.680740Z",
@@ -336,7 +342,7 @@
    },
    "outputs": [],
    "source": [
-    "def calc_bow(dataset, vocab):\n",
+    "def calc_bow(dataset: list, vocab: list) -> pd.DataFrame:\n",
     "    data = dict()\n",
     "    for term in vocab:\n",
     "        data[term] = list()\n",
@@ -348,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-23T14:11:58.694719Z",
@@ -447,7 +453,7 @@
        "5   0   3   0   0   3"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-23T14:11:58.717795Z",
@@ -483,7 +489,7 @@
    },
    "outputs": [],
    "source": [
-    "def calc_tf(dataset_bow):\n",
+    "def calc_tf(dataset_bow: pd.DataFrame) -> pd.DataFrame:\n",
     "    tf_dataset = dataset_bow.copy()\n",
     "    max_dataset = tf_dataset.max(axis=\"columns\")\n",
     "    for term in tf_dataset:\n",
@@ -494,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-23T14:11:58.737943Z",
@@ -594,7 +600,7 @@
        "5  0.0  1.0  0.0  0.0  1.0"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-23T14:11:58.777595Z",
@@ -627,7 +633,7 @@
    "outputs": [],
    "source": [
     "import functools\n",
-    "def calc_idf(dataset_bow):\n",
+    "def calc_idf(dataset_bow: pd.DataFrame) -> dict:\n",
     "    number_documents = len(dataset_bow.index) # rows (or index) represents the documents\n",
     "    idf_dict = dict()\n",
     "    for term in dataset_bow:\n",
@@ -640,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-23T14:11:58.792834Z",
@@ -658,7 +664,7 @@
        " 't2': 0.07918124604762482}"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-23T14:11:58.817896Z",
@@ -689,7 +695,7 @@
    },
    "outputs": [],
    "source": [
-    "def calc_tf_idf(tf, idf):\n",
+    "def calc_tf_idf(tf: pd.DataFrame, idf: dict) -> pd.DataFrame:\n",
     "    tf_idf = tf.copy()\n",
     "    for term in tf_idf:\n",
     "        term_idf = idf[term]\n",
@@ -700,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-23T14:11:58.837641Z",
@@ -799,7 +805,7 @@
        "5  0.000000  0.176091  0.000000  0.000000  0.079181"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-24T13:06:17.829181Z",
@@ -836,8 +842,26 @@
    },
    "outputs": [],
    "source": [
-    "def calc_query(query, dataset):\n",
-    "    pass"
+    "def cos_similarity(word_1: np.ndarray, word_2: np.ndarray) -> float:\n",
+    "    dot_product = word_1 @ word_2\n",
+    "    word_1_norm = np.sqrt(word_1 @ word_1)\n",
+    "    word_2_norm = np.sqrt(word_2 @ word_2)\n",
+    "    return dot_product / (word_1_norm * word_2_norm)\n",
+    "\n",
+    "def calc_query(query: str, dataset: list):\n",
+    "    dataset_with_query = dataset.append(query)\n",
+    "    vocabulary = get_vocab(dataset_with_query)\n",
+    "    dataframe_bow = calc_bow(dataset_with_query, vocabulary)\n",
+    "    dataframe_tf = calc_tf(dataframe_bow)\n",
+    "    idf_dict = calc_idf(dataframe_bow)\n",
+    "    dataframe_tf_idf = calc_tf_idf(dataframe_tf, idf_dict)\n",
+    "    query_tf_idf = get_query_tf_idf(dataframe_tf_idf, query)\n",
+    "    word_cosine_similarity = dict()\n",
+    "    for index, row in dataframe_tf_idf.iterrows():\n",
+    "        word_cosine_similarity[index] = cos_similarity(query_tf_idf, row.to_numpy())\n",
+    "    \n",
+    "        \n",
+    "    "
    ]
   },
   {
