feat(first): Start the optional part

--- a/src/First Homework/2_Minitarea1.ipynb
+++ b/src/First Homework/2_Minitarea1.ipynb
@@ -842,23 +842,8 @@
    },
    "outputs": [],
    "source": [
-    "def cos_similarity(word_1: np.ndarray, word_2: np.ndarray) -> float:\n",
-    "    dot_product = word_1 @ word_2\n",
-    "    word_1_norm = np.sqrt(word_1 @ word_1)\n",
-    "    word_2_norm = np.sqrt(word_2 @ word_2)\n",
-    "    return dot_product / (word_1_norm * word_2_norm)\n",
-    "\n",
-    "def calc_query(query: str, dataset: list):\n",
-    "    dataset_with_query = dataset.append(query)\n",
-    "    vocabulary = get_vocab(dataset_with_query)\n",
-    "    dataframe_bow = calc_bow(dataset_with_query, vocabulary)\n",
-    "    dataframe_tf = calc_tf(dataframe_bow)\n",
-    "    idf_dict = calc_idf(dataframe_bow)\n",
-    "    dataframe_tf_idf = calc_tf_idf(dataframe_tf, idf_dict)\n",
-    "    query_tf_idf = get_query_tf_idf(dataframe_tf_idf, query)\n",
-    "    word_cosine_similarity = dict()\n",
-    "    for index, row in dataframe_tf_idf.iterrows():\n",
-    "        word_cosine_similarity[index] = cos_similarity(query_tf_idf, row.to_numpy())\n",
+    "def calc_query(query, dataset):\n",
+    "    pass\n",
     "    \n",
     "        \n",
     "    "
