fix(homework2): Fix training bug in classifier

--- a/src/1_minitarea2.ipynb
+++ b/src/1_minitarea2.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 73,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -200,6 +200,7 @@
     "    def __repr__(self) -> Dict[str, Union[Dict,Set]]:\n",
     "        return {\n",
     "            'vocabulary': self.vocabulary,\n",
+    "            'document_classes': self.document_classes,\n",
     "            'class_probabilities': self.class_probabilities,\n",
     "            'word_probabilities': self.word_probabilities,\n",
     "        }\n",
@@ -247,8 +248,8 @@
     "        \n",
     "        # Calculate the word probability on each class for each word\n",
     "        for document_class in self.document_classes:\n",
-    "            class_documents = filter(lambda x: x.class_ == document_class, training_set)\n",
-    "            class_documents_words = map(lambda x: x.words, class_documents)\n",
+    "            class_documents = list(filter(lambda x: x.class_ == document_class, training_set))\n",
+    "            class_documents_words = list(map(lambda x: x.words, class_documents))\n",
     "            total_words_in_class = self.vocabulary_size\n",
     "            for word in self.vocabulary: \n",
     "                document_ocurrences = [document.count(word) for document in class_documents_words]\n",
@@ -311,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
