--- a/src/1_minitarea2.ipynb
+++ b/src/1_minitarea2.ipynb
@@ -43,7 +43,10 @@
     "id": "5VUjDx0NrYbg"
    },
    "source": [
-    "**Respuesta:**"
+    "**Respuesta:**\n",
+    "Tomemos x_-1 = x_0 = * , x_1 = el , x_2 = perro , x_3 = le, x_4 = ladra, x_5 = al, x_6 = gato, entonces la probabilidad asignada al corpus: \n",
+    "\n",
+    "q(el perro le ladra al gato) = q(el|* , * ) x q(perro|* , el) x q(le|el, perro) x q(ladra|perro, le) x q(al|le, ladra) x q(gato|ladra, al) x q(STOP|al, gato)"
    ]
   },
   {
@@ -64,7 +67,7 @@
     "id": "zeLZAd0Tr9ne"
    },
    "source": [
-    "**Respuesta:**"
+    "**Respuesta:**\n"
    ]
   },
   {
@@ -85,7 +88,13 @@
     "id": "6F5R3Ji7sHjt"
    },
    "source": [
-    "**Respuesta:**"
+    "**Respuesta:**\n",
+    "\n",
+    "Al aplicar el modelo de trigramas a un corpus, este produce un language model con mucha variabilidad pues es muy dependiente del corpus dado que los trigramas pueden estar o no en un corpus que quiera modelar con el language model producido\n",
+    "\n",
+    "En Machine Learning esto se conoce como el dilema de la sesgo-varianza, en que modelos con mas parametros y mas complejos tienen menos sesgo pero varian mucho dependiendo del corpus (como el caso de los trigramas). Pero modelos más simples con menos parametros tienen una menor varianza al aplicarlo en distintos corpus pero mayor sesgo (como es el caso de los unigramas)\n",
+    "\n",
+    "Para modelar de mejor manera el lenguaje se hace una interpolacion entre el modelo de trigramas simple con el de bigramas y unigramas, esto permite tener un buen balance entre sesgo y variabilidad de los corpus obteniendo asi un modelo que podemos generalizar. "
    ]
   },
   {
