feat(minitarea2): Finish minitarea2

--- a/src/1_minitarea2.ipynb
+++ b/src/1_minitarea2.ipynb
@@ -44,9 +44,9 @@
    },
    "source": [
     "**Respuesta:**\n",
-    "Tomemos x_-1 = x_0 = * , x_1 = el , x_2 = perro , x_3 = le, x_4 = ladra, x_5 = al, x_6 = gato, entonces la probabilidad asignada al corpus: \n",
+    "Tomemos $x_{-1}= x_{0} = * $, $x_{1} = el$ , $x_{2} = perro$ , $x_{3} = le$, $x_{4} = ladra$, $x_{5} = al$, $x_{6} = gato$, entonces la probabilidad asignada al corpus: \n",
     "\n",
-    "q(el perro le ladra al gato) = q(el|* , * ) x q(perro|* , el) x q(le|el, perro) x q(ladra|perro, le) x q(al|le, ladra) x q(gato|ladra, al) x q(STOP|al, gato)"
+    "$q(el\\;perro\\;le\\;ladra\\;al\\;gato) = q(el|* , * ) \\times q(perro|* , el) \\times q(le|el, perro) \\times q(ladra|perro, le) \\times q(al|le, ladra) \\times q(gato|ladra, al) \\times q(STOP|al, gato)$"
    ]
   },
   {
@@ -67,7 +67,12 @@
     "id": "zeLZAd0Tr9ne"
    },
    "source": [
-    "**Respuesta:**\n"
+    "**Respuesta:**\n",
+    "Supongamos que tenemos los hiper parametros $\\lambda_{1}\\;\\lambda_{2}\\;\\lambda_{3}$ ya calculados, el modelo que interpola al modelo del lenguaje usando trigramas, bigramas y unigramas estaria dado por:\n",
+    "\n",
+    "$q(w_{i}|w_{i-2},w_{i-1}) = \\lambda_{1} \\times q_{ML, 3}(w_{i}| w_{i-2}, w_{i-1}) + \\lambda_{2} \\times q_{ML,2}(w_{i}|w_{i-1}) + \\lambda_{3} \\times q_{ML,1}(w_{i})$\n",
+    "\n",
+    "Donde los $q_{ML,i}$ son los modelos no interpolas de trigramas, bigramas y unigramas respectivos para $ i \\in \\{3,2,1\\}$"
    ]
   },
   {
